# gaussian-process-odes

./: .gitignore  LICENSE  README.md  pyproject.toml  train_mocap_gpode.py  train_mocap_gpode_shooting.py  train_vdp_gpode.py  train_vdp_gpode_shooting.py
data/fhn/: fhn_interpolation.npz  fhn_interpolation_small.npz
data/mocap/: mocap09.npz  mocap35.npz  mocap39.npz
data/vdp/: vdp_nonuniform.npz  vdp_uniform.npz
notebooks/: Learning-VDP-with-GPODE.ipynb
src/core/: constraints.py  dsvgp.py  flow.py  kernels.py  likelihoods.py  states.py
src/datasets/: fhn.py  mocap.py  vanderpol.py
src/gpode/: mocap_initialization.py  mocap_model_builder.py  model_builder.py  model_initialization.py  models.py  plots_2d.py  plots_mocap.py
src/gpode_shooting/: mocap_initialization.py  mocap_model_builder.py  model_builder.py  model_initialization.py  models.py  plots_2d.py  plots_mocap.py
src/misc/: constraint_utils.py  io_utils.py  meter_utils.py  mocap_utils.py  param.py  plot_utils.py  settings.py  torch_utils.py  transforms.py
src/neuralode/: mocap_model_builder.py  model_builder.py  plots_2d.py  plots_mocap.py
